<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/bt_add_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_add_person" />

    <Button
        android:id="@+id/bt_delete_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_delete_person" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/tv_quary_name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_quary_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="text" />

        <Button
            android:id="@+id/bt_quary_person"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/bt_quary_person" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/tv_modify_address"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_modify_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="text" />

        <Button
            android:id="@+id/bt_modify_person"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/bt_modify_person" />
    </LinearLayout>

    <Button
        android:id="@+id/button_push_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="Push" />

</LinearLayout>